--- a/front-end/src/app/register/register.component.html
+++ b/front-end/src/app/register/register.component.html
@@ -1,37 +1,57 @@
 <div class="container-fluid">
-  <div class="row">
-    <form class="mt-5  col-lg-3 offset-lg-4 col-12 offset-0" >
-      <h2>Sign up to</h2>
 
+  <div class="row">
+    <form class="mt-5  col-lg-3 offset-lg-4 col-12 offset-0" (ngSubmit)="onSubmit()" >
+      <h2 class="text-center m-2">Sign up to</h2>
       <div class="form-outline">
         <label class="form-label" for="{{ROLE_KEY}}">Create account as :</label>
-        <select name="" id="">
+        <select class="form-select" name="{{ROLE_KEY}}" id="{{ROLE_KEY}}" [(ngModel)]="formData.role">
           <!-- list possible roles-->
+          <option *ngFor="let role of roles" [value]="role">
+            {{role}}
+          </option>
         </select>
-        <input type="email" id="{{FIRST_NAME_KEY}}" class="form-control" name="{{FIRST_NAME_KEY}}"/>
+
       </div>
       <!-- First name input -->
       <div class="form-outline">
         <label class="form-label" for="{{FIRST_NAME_KEY}}">first name:</label>
-        <input type="email" id="{{FIRST_NAME_KEY}}" class="form-control" name="{{FIRST_NAME_KEY}}"/>
+        <input type="text"
+               id="{{FIRST_NAME_KEY}}"
+               class="form-control"
+               name="{{FIRST_NAME_KEY}}"
+               [(ngModel)]="formData.firstName"
+        />
       </div>
       <!-- Last name input -->
       <div class="form-outline">
         <label class="form-label" for="{{LAST_NAME_KEY}}">last name:</label>
-        <input type="email" id="{{LAST_NAME_KEY}}" class="form-control" name="{{LAST_NAME_KEY}}"/>
+        <input type="text"
+               id="{{LAST_NAME_KEY}}"
+               class="form-control"
+               name="{{LAST_NAME_KEY}}"
+               [(ngModel)]="formData.lastName"
+        />
       </div>
       <!-- Email input -->
       <div class="form-outline">
         <label class="form-label" for="{{EMAIL_KEY}}">Email address</label>
-        <input type="email" id="{{EMAIL_KEY}}" class="form-control" name="{{EMAIL_KEY}}" />
+        <input type="email"
+               [(ngModel)]="formData.email"
+               id="{{EMAIL_KEY}}" class="form-control" name="{{EMAIL_KEY}}"/>
       </div>
       <!-- Password input -->
       <div class="form-outline ">
         <label class="form-label" for="{{PASSWORD_KEY}}">Password</label>
-        <input type="password" id="{{PASSWORD_KEY}}" class="form-control" name="{{PASSWORD_KEY}}"/>
+        <input type="password"
+               [(ngModel)]="formData.password"
+               id="{{PASSWORD_KEY}}" class="form-control" name="{{PASSWORD_KEY}}"/>
+      </div>
+      <div class="alert alert-success">
+        data is {{formData | json}}
       </div>
       <!-- Submit button -->
-      <button type="button" class="btn btn-primary btn-block mb-4 w-100">Sign up</button>
+      <button type="submit" class="btn btn-primary btn-block mb-4 w-100">Sign up</button>
     </form>
   </div>
 </div>
